TEST_PROGRAMS/INVALID/adam_carruthers/unrecognisedToken.min
# This should catch compilers which silently ignore unrecognised characters.
print !x;

